--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -14,7 +14,8 @@
               <a href="{{ url_for('login') }}">Login</a>
               {% else %}
               <a href="{{ url_for('user', username=current_user.username) }}">Profile</a>
-              <a href="{{ url_for('logout') }}">Logout</a>
+               <a href="{{ url_for('edit_profile') }}">Edit</a>
+			   <a href="{{ url_for('logout') }}">Logout</a>
               {% endif %}
         </div>
         <hr>
