--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -3,9 +3,9 @@
 {% block content %}
     <table>
         <tr valign="top">
-            <td><h1>User: {{ user.username }}</h1></td>
-            <td>
-                <h1>User: {{ user.username }}</h1>
+            <td><h1>User: {{ user.username }}</h1>
+			</td>
+         
                 {% if user.about_me %}<p>{{ user.about_me }}</p>{% endif %}
                 {% if user.last_seen %}<p>Last seen on: {{ user.last_seen }}</p>{% endif %}
             </td>
